[workspace]
resolver = "3"
members = ["crates/*", "examples/*/*"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
# Examples dependencies

ioevent = { path = "crates/ioevent" }
ioevent_macro = { path = "crates/ioevent_macro" }
rpc-common = { path = "examples/rpc/common" }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.216", features = ["derive", "serde_derive"] }
