[workspace]
resolver = "3"
members = ["crates/*", "examples/*/*"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
# Examples dependencies

ioevent = { path = "crates/ioevent", version = "0.1.0-rc.3" }
ioevent_macro = { path = "crates/ioevent_macro", version = "0.1.0-rc.3" }
base-common = { path = "examples/base/common"}
rpc-common = { path = "examples/rpc/common" }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.216", features = ["derive", "serde_derive"] }
