[package]
name = "ioevent"
version = "0.1.0-rc.2"
edition.workspace = true
license = "Unlicense"
repository = "https://github.com/BERADQ/ioevent"
description = "Transform Any tokio Async I/O into Event-Driven Architecture with Low Overhead."
keywords = ["event", "async", "tokio", "ioevent", "rpc"]

[features]
macros = ["ioevent_macro"]
default = ["macros"]

[dependencies]

# Internal dependencies

ioevent_macro = { version = "0.1.0-rc.2", optional = true, workspace = true }

# External dependencies

serde = { version = "1.0.216", features = ["derive", "serde_derive"] }
channels = { version = "0.13.0", features = [
    "tokio",
    "cbor",
    "std",
], default-features = false }
tokio = { version = "1.44.2", features = ["full"] }
ciborium = "0.2.2"
futures-util = "0.3.31"
thiserror = "2.0.12"
futures = "0.3.31"
rand = "0.9.0"
crossbeam-queue = "0.3.12"
tokio-util = "0.7.14"
triomphe = "0.1.14"
