[package]
name = "ioevent_macro"
version = "0.1.0-rc.1"
edition.workspace = true
license = "Unlicense"
repository = "https://github.com/BERADQ/ioevent"
description = "Macro for ioevent"
keywords = ["macro", "ioevent", "event", "async", "tokio"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }
